simplified MLPerf inference GUI from user feedback: https://github.com/mlcommons/ck/issues/1118
Former-commit-id: 87e173aac266fe3c1be7fb8c3701dd2db3cdc4b4

--- a/cm-mlops/script/run-mlperf-inference-app/_cm.yaml
+++ b/cm-mlops/script/run-mlperf-inference-app/_cm.yaml
@@ -418,7 +418,7 @@ input_description:
     sort: 5010
   clean:
     boolean: true
-    default: true
+    default: false
     desc: Clean run
   compliance:
     choices:
