removed outdated links
Former-commit-id: 5e00eefd5156a7d5e04a5811b813878e3d0f805b

--- a/cm-mlops/cfg/benchmark-list/mlperf-inference.yaml
+++ b/cm-mlops/cfg/benchmark-list/mlperf-inference.yaml
@@ -16,6 +16,8 @@ urls:
 
 script_name: run-mlperf-inference-app,4a5d5b13fd7e4ac8
 
+skip_extra_urls: true
+
 supported_compute:
 - cpu,x64
 - cpu,arm64
