improving get-cuda on Windows and fixing some typos
Former-commit-id: 2280d4da2e561e1362c7d6797ddf3d1d69bfb4df

--- a/cm-mlops/script/run-mlperf-inference-app/_cm.yaml
+++ b/cm-mlops/script/run-mlperf-inference-app/_cm.yaml
@@ -306,7 +306,7 @@ input_description:
     - llama2-70b-99.9
     - mobilenet
     - efficientnet
-    default: retinanet
+    default: resnet50
     desc: MLPerf model
     sort: 200
   precision:
