Fixes for QAIC Pro cards, support bert-99.9

--- a/cm-mlops/script/app-mlperf-inference/_cm.yaml
+++ b/cm-mlops/script/app-mlperf-inference/_cm.yaml
@@ -328,7 +328,7 @@ variations:
 
   kilt,qualcomm,bert-99.9:
     default_variations:
-      precision: fp16
+      precision: float16
 
   resnet50:
     group:
