Cleanups for rb6
Former-commit-id: 9bb4a35d3e145fbbf7dc7f30f9f3ba5fd613286f

--- a/cm-mlops/script/benchmark-any-mlperf-inference-implementation/_cm.yaml
+++ b/cm-mlops/script/benchmark-any-mlperf-inference-implementation/_cm.yaml
@@ -291,3 +291,27 @@ variations:
           glow:
             offline_target_qps: 350
             server_target_qps: 300
+  rb6:
+    group: sut
+    default_env:
+      CATEGORY: edge
+      DIVISION: closed
+    default_variations:
+      implementation: qualcomm
+
+  rb6,qualcomm:
+    default_env:
+      EXTRA_ARGS: " --adr.mlperf-inference-implementation.tags=_rb6 --env.CM_MLPERF_SHORT_RANGING_RUN=no"
+    state:
+      resnet50:
+        qaic:
+          glow:
+            offline_target_qps: 6800
+      retinanet:
+        qaic:
+          glow:
+            offline_target_qps: 125
+      bert-99:
+        qaic:
+          glow:
+            offline_target_qps: 255
