--- a/cm-mlops/script/run-mlperf-inference-app/_cm.yaml
+++ b/cm-mlops/script/run-mlperf-inference-app/_cm.yaml
@@ -62,6 +62,7 @@ input_mapping:
   output_dir: OUTPUT_BASE_DIR
   output_summary: MLPERF_INFERENCE_SUBMISSION_SUMMARY
   output_tar: MLPERF_INFERENCE_SUBMISSION_TAR_FILE
+  performance_sample_count: CM_MLPERF_LOADGEN_PERFORMANCE_SAMPLE_COUNT
   power: CM_SYSTEM_POWER
   precision: CM_MLPERF_MODEL_PRECISION
   preprocess_submission: CM_RUN_MLPERF_SUBMISSION_PREPROCESSOR
