--- a/cm-mlops/script/reproduce-mlperf-inference-qualcomm/_cm.yaml
+++ b/cm-mlops/script/reproduce-mlperf-inference-qualcomm/_cm.yaml
@@ -36,7 +36,7 @@ default_env:
   CM_KILT_REPO_URL: https://github.com/GATEOverflow/kilt-mlperf
   CM_QAIC_DEVICES: "0"
   kilt_max_wait_abs: 10000
-  verbosity: 1
+  verbosity: 0
   loadgen_trigger_cold_run: 0
 
 env:
@@ -291,7 +291,7 @@ variations:
         skip_if_env:
           CM_MLPERF_SKIP_RUN:
             - yes
-      - tags: get,lib,protobuf,_tag.v3.21.2
+      - tags: get,lib,protobuf,_tag.v3.11.4
         skip_if_env:
           CM_MLPERF_SKIP_RUN:
             - yes
@@ -338,6 +338,11 @@ variations:
       qaic-model-compiler:
         tags: "_bs.#"
 
+  bs.0:
+    group: batch-size
+    env:
+      kilt_model_batch_size: "1"
+  
   # Reference MLPerf models
   resnet50:
     group: model
@@ -435,7 +440,10 @@ variations:
       loadgen_dataset_size: 10833
 
   bert_,qaic:
+    default_variations:
+      batch-size: bs.0
     env:
+      kilt_model_batch_size: 1
       kilt_input_format: "UINT32,1,384:UINT32,1,8:UINT32,1,384:UINT32,1,384"
       kilt_input_formata: "UINT32,1,384:UINT32,1,384:UINT32,1,384"
       kilt_output_formatia: "UINT8,1,384:UINT8,1,384"
@@ -468,6 +476,7 @@ variations:
   bert_,singlestream:
     env:
       kilt_model_batch_size: 1
+
   bert-99:
     group: model
     base:
@@ -486,12 +495,20 @@ variations:
       CM_NOT_ML_MODEL_STARTING_WEIGHTS_FILENAME: "https://zenodo.org/record/3733910/files/model.onnx"
 
   loadgen-batch-size.#:
+    group: loadgen-batch-size
     env:
       CM_MLPERF_LOADGEN_BATCH_SIZE: "#"
 
+  bert-99,offline:
+    default_variations:
+      loadgen-batch-size: loadgen-batch-size.4096
+   
+  bert-99.9,offline:
+    default_variations:
+      loadgen-batch-size: loadgen-batch-size.4096
+ 
   activation-count.#:
     env:
-      CM_MODEL_BATCH_SIZE: "#"
       CM_MLPERF_QAIC_ACTIVATION_COUNT: "#"
       #CM_MLPERF_SUT_NAME_RUN_CONFIG_SUFFIX1: "activation_count.#"
 
@@ -507,13 +524,18 @@ variations:
 
   singlestream:
     group: loadgen-scenario
-    default_variations:
-      batch-size: bs.1
     env:
       CM_MLPERF_LOADGEN_SCENARIO: SingleStream
     adr:
       qaic-model-compiler:
         tags: _singlestream
+  singlestream,resnet50:
+    default_variations:
+      batch-size: bs.1
+
+  singlestream,retinanet:
+    default_variations:
+      batch-size: bs.1
 
   multistream:
     group: loadgen-scenario
@@ -634,16 +656,12 @@ variations:
       - tags: set,device,qaic,_vc.16
 
   pro,num-devices.4,bert-99,offline:
-    base:
-      - loadgen-batch-size.4096
     env:
       qaic_activation_count: "16"
     deps:
       - tags: set,device,qaic,_vc.15
 
   pro,num-devices.4,bert-99.9,offline:
-    base:
-      - loadgen-batch-size.4096
     env:
       qaic_activation_count: "8"
     deps:
@@ -689,13 +707,13 @@ variations:
     default_variations:
       batch-size: bs.8
     env:
-      qaic_activation_count: "3"
+      qaic_activation_count: "2"
 
   rb6,resnet50,multistream:
     default_variations:
-      batch-size: bs.8
+      batch-size: bs.4
     env:
-      qaic_activation_count: "3"
+      qaic_activation_count: "2"
 
   rb6,bert-99,offline:
     env:
