Cleanups for llama2 run
Former-commit-id: a58123c53de0733bf48f5276860a2021012c7bc2

--- a/cm-mlops/script/app-mlperf-inference-reference/_cm.yaml
+++ b/cm-mlops/script/app-mlperf-inference-reference/_cm.yaml
@@ -905,6 +905,10 @@ variations:
     base:
       - llama2-70b_
 
+  llama2-70b_,cuda:
+    default_env:
+      CM_MLPERF_LOADGEN_BATCH_SIZE: 8
+
   llama2-70b-99.9:
     group: models
     env:
@@ -1113,6 +1117,7 @@ variations:
     alias: int8
 
   batch_size.#:
+    group: batch-size
     env:
       CM_MLPERF_LOADGEN_MAX_BATCHSIZE: "#"
     add_deps_recursive:
