added "print_env_at_the_end" dict at the end to print some env vars (such as paths to models or datasets) at the end of the script even if cached!
Former-commit-id: 784286bf14ba34798c8eda1fa44d1a25b65f3205

--- a/cm-mlops/script/get-axs/_cm.yaml
+++ b/cm-mlops/script/get-axs/_cm.yaml
@@ -33,3 +33,6 @@ deps:
     extra_cache_tags: git-axs
     env:
       CM_GIT_CHECKOUT_PATH_ENV_NAME: CM_AXS_PATH
+
+print_env_at_the_end:
+  CM_AXS_PATH: "Path to the tool"
