--- a/.github/workflows/test-cm.yml
+++ b/.github/workflows/test-cm.yml
@@ -16,7 +16,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["3.9", "3.10", "3.11"]
+        python-version: ["3.7", "3.8", "3.9", "3.10", "3.11", "3.12"]
         on: [ubuntu-latest]
     runs-on: "${{ matrix.on }}"
     steps:
@@ -49,7 +49,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["3.7", "3.8", "3.9", "3.10"]
+        python-version: ["3.7", "3.8", "3.9", "3.10", "3.11", "3.12"]
         on: [ubuntu-latest, windows-latest]
     runs-on: "${{ matrix.on }}"
     steps:
