testing 3.11 instead of 3.12
Former-commit-id: c454409079f8ce9505918f7424bdfdfbbad42c5b

--- a/.github/workflows/test-cm-script-features.yml
+++ b/.github/workflows/test-cm-script-features.yml
@@ -18,7 +18,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["3.12", "3.11", "3.10", "3.9", "3.8"]
+        python-version: ["3.11", "3.10", "3.9", "3.8"]
 
     steps:
     - uses: actions/checkout@v3
