--- a/.github/workflows/test-mlperf-inference-mil-cpp-resnet50.yml
+++ b/.github/workflows/test-mlperf-inference-mil-cpp-resnet50.yml
@@ -32,7 +32,7 @@ jobs:
         python3 -m pip install cmind
         cm pull repo --url=${{ github.event.pull_request.head.repo.html_url }} --checkout=${{ github.event.pull_request.head.ref }}
         cm run script --quiet --tags=get,sys-utils-cm
-        cm run script --quiet --tags=install,llvm-prebuilt --version=${{ matrix.llvm-version }}
+        cm run script --quiet --tags=install,prebuilt,llvm --version=${{ matrix.llvm-version }}
     - name: Test MLPerf Inference MIL C++ ResNet50
       run: |
         cmr "app mlperf inference cpp" -v --quiet
