Fixes for mlperf inference reference bert pytorch
Former-commit-id: 962915a594d83c5a05855633d24648408e10c111

--- a/cm-mlops/script/app-mlperf-inference-reference/_cm.yaml
+++ b/cm-mlops/script/app-mlperf-inference-reference/_cm.yaml
@@ -111,6 +111,7 @@ deps:
       - onnxruntime
       - tf
       - tflite
+      - pytorch
 
   # Detect TensorRT if required
   - tags: get,nvidia,tensorrt
@@ -835,6 +836,9 @@ variations:
       names:
       - ml-engine-pytorch
       - pytorch
+      skip_if_env:
+        CM_MLPERF_DEVICE:
+          - gpu
     add_deps_recursive:
       inference-src:
         tags: _deeplearningexamples
