--- a/.github/workflows/test-mlperf-inference-resnet50.yml
+++ b/.github/workflows/test-mlperf-inference-resnet50.yml
@@ -20,7 +20,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: [ "3.8" ]
+        python-version: [ "3.12", "3.9" ]
         backend: [ "onnxruntime", "tf" ]
         implementation: [ "python", "cpp" ]
         exclude:
