--- a/.github/workflows/test-mlperf-inference-rnnt.yml
+++ b/.github/workflows/test-mlperf-inference-rnnt.yml
@@ -18,7 +18,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: [ "3.9" ]
+        python-version: [ "3.12", "3.9" ]
         backend: [ "pytorch" ]
         precision: [ "fp32" ]
 
