--- a/.github/workflows/test-mlperf-inference-tvm.yml
+++ b/.github/workflows/test-mlperf-inference-tvm.yml
@@ -19,7 +19,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: [ "3.10" ]
+        python-version: [ "3.12", "3.10" ]
         backend: [ "tvm-onnx" ]
 
     steps:
