--- a/cm-mlops/script/app-mlperf-inference/_cm.yaml
+++ b/cm-mlops/script/app-mlperf-inference/_cm.yaml
@@ -1162,3 +1162,4 @@ docker:
     results_dir: RESULTS_DIR
     submission_dir: SUBMISSION_DIR
     dlrm_data_path: DLRM_DATA_PATH
+    intel_gptj_int8_model_path: CM_MLPERF_INFERENCE_INTEL_GPTJ_INT8_MODEL_PATH
