--- a/cm-mlops/script/run-mlperf-inference-app/_cm.yaml
+++ b/cm-mlops/script/run-mlperf-inference-app/_cm.yaml
@@ -116,11 +116,16 @@ deps:
 - tags: get,mlperf,inference,utils
 
 docker:
-  fake_run_deps: true
   mounts:
   - ${{ INSTALL_DATA_PATH }}:/install_data
   - ${{ DATA_PATH }}:/data
   - ${{ CM_MLPERF_INFERENCE_INTEL_GPTJ_INT8_MODEL_PATH }}:${{ CM_MLPERF_INFERENCE_INTEL_GPTJ_INT8_MODEL_PATH }}
+  - ${{ GPTJ_CHECKPOINT_PATH }}:${{ GPTJ_CHECKPOINT_PATH }}
+  skip_run_cmd: 'no'
+  shm_size: '32gb'
+  extra_run_args: ' --ulimit memlock=-1 --cap-add SYS_ADMIN --cap-add SYS_TIME --security-opt apparmor=unconfined --security-opt seccomp=unconfined'
+  docker_os: ubuntu
+  docker_real_run: true
   run: true
   docker_input_mapping:
     imagenet_path: IMAGENET_PATH
