Fix docker_input_mapping processing
Former-commit-id: a96eb9b1e82fed643ca930fb74e5d5c8036dc45d

--- a/cm-mlops/script/run-mlperf-inference-app/_cm.yaml
+++ b/cm-mlops/script/run-mlperf-inference-app/_cm.yaml
@@ -125,7 +125,7 @@ docker:
   shm_size: '32gb'
   extra_run_args: ' --ulimit memlock=-1 --cap-add SYS_ADMIN --cap-add SYS_TIME --security-opt apparmor=unconfined --security-opt seccomp=unconfined'
   docker_os: ubuntu
-  docker_real_run: true
+  docker_real_run: false
   run: true
   docker_input_mapping:
     imagenet_path: IMAGENET_PATH
