clean up new implementation tags in MLPerf inference GUI

--- a/cm-mlops/script/run-mlperf-inference-app/_cm.yaml
+++ b/cm-mlops/script/run-mlperf-inference-app/_cm.yaml
@@ -345,7 +345,7 @@ input_description:
     - intel
     - qualcomm
     - ctuning-cpp-tflite
-    default: reference
+    default: mlcommons-python
     desc: MLPerf implementation
     sort: 300
   backend:
