--- a/.github/workflows/test-mlperf-inference-mlcommons-cpp-resnet50.yml
+++ b/.github/workflows/test-mlperf-inference-mlcommons-cpp-resnet50.yml
@@ -1,13 +1,13 @@
 # This workflow will install Python dependencies, run tests and lint with a variety of Python versions
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 
-name: MLPerf inference MIL C++ ResNet50
+name: MLPerf inference MLCommons C++ ResNet50
 
 on:
   pull_request:
     branches: [ "master", "dev" ]
     paths:
-      - '.github/workflows/test-mlperf-inference-mil-cpp-resnet50.yml'
+      - '.github/workflows/test-mlperf-inference-mlcommons-cpp-resnet50.yml'
       - 'cm-mlops/**'
       - '!cm-mlops/**.md'
 
@@ -33,6 +33,6 @@ jobs:
         cm pull repo --url=${{ github.event.pull_request.head.repo.html_url }} --checkout=${{ github.event.pull_request.head.ref }}
         cm run script --quiet --tags=get,sys-utils-cm
         cm run script --quiet --tags=install,prebuilt,llvm --version=${{ matrix.llvm-version }}
-    - name: Test MLPerf Inference MIL C++ ResNet50
+    - name: Test MLPerf Inference MLCommons C++ ResNet50
       run: |
-        cmr "app mlperf inference cpp" -v --quiet
+        cmr "app mlperf inference mlcommons cpp" -v --quiet
