Intstall torchvision from src

--- a/cm-mlops/script/build-mlperf-inference-server-nvidia/_cm.yaml
+++ b/cm-mlops/script/build-mlperf-inference-server-nvidia/_cm.yaml
@@ -204,9 +204,10 @@ versions:
         tags: _version.4_0
     deps:
       - tags: install,nccl,libs,_cuda
-      - tags: install,pytorch,from.src,_for-nvidia-mlperf-inference-v3.1-gptj
+      - tags: install,pytorch,from.src,_for-nvidia-mlperf-inference-v3.1
         names:
         - pytorch
+        - torch
 
 docker:
   skip_run_cmd: 'no'
