--- a/cm-mlops/script/build-mlperf-inference-server-nvidia/_cm.yaml
+++ b/cm-mlops/script/build-mlperf-inference-server-nvidia/_cm.yaml
@@ -236,8 +236,8 @@ docker:
     - tags: get,mlperf,inference,submission,dir
     - tags: get,nvidia-docker
   pre_run_cmds:
-    - cm pull repo mlcommons@ck
-  run_cmd_prefix: sudo apt remove -y cmake && cm pull repo mlcommons@ck
+    - cm pull repo
+  run_cmd_prefix: sudo apt remove -y cmake
   mounts:
    - "${{ IMAGENET_PATH }}:/data/imagenet-val"
    - "${{ CM_MLPERF_INFERENCE_RESULTS_DIR }}:${{ CM_MLPERF_INFERENCE_RESULTS_DIR }}"
