Cleanups for nvidia mlperf inference  rnnt
Former-commit-id: acfa030d7fc87fdc88c33819267297adfa418c0c

--- a/cm-mlops/script/app-mlperf-inference/_cm.yaml
+++ b/cm-mlops/script/app-mlperf-inference/_cm.yaml
@@ -280,7 +280,7 @@ variations:
          - nvidia-original-mlperf-inference
          - nvidia-harness
          - mlperf-inference-implementation
-        tags: reproduce,mlperf,nvidia,inference
+        tags: reproduce,mlperf,nvidia,inference,_run_harness
         skip_if_env:
           CM_SKIP_RUN:
             - yes
