--- a/cm-mlops/script/app-mlperf-inference-nvidia/_cm.yaml
+++ b/cm-mlops/script/app-mlperf-inference-nvidia/_cm.yaml
@@ -830,7 +830,7 @@ variations:
 
   gptj_,run_harness:
     deps:
-    - tags: install,pytorch,from.src,_for-nvidia-mlperf-inference-v3.1-gptj
+    - tags: install,pytorch,from.src,_for-nvidia-mlperf-inference-v3.1
     - tags: get,cmake
       version_min: "3.25.0"
     env:
