--- a/cm-mlops/script/app-mlperf-inference-qualcomm/_cm.yaml
+++ b/cm-mlops/script/app-mlperf-inference-qualcomm/_cm.yaml
@@ -366,6 +366,9 @@ variations:
       kilt_input_format: "UINT8,-1,224,224,3"
       kilt_device_qaic_skip_stage: convert
       CM_IMAGENET_ACCURACY_DTYPE: int8
+      CM_ML_MODEL_WEIGHT_TRANSFORMATIONS: "https://github.com/mlcommons/inference_results_v3.1/blob/main/closed/Qualcomm/calibration.md"
+      CM_ML_MODEL_WEIGHTS_DATA_TYPE: int8
+      CM_ML_MODEL_INPUTS_DATA_TYPE: int8
 
   bert-99,qaic:
     deps:
@@ -376,6 +379,10 @@ variations:
         skip_if_env:
           CM_MLPERF_SKIP_RUN:
             - yes
+    env:
+      CM_ML_MODEL_WEIGHT_TRANSFORMATIONS: "https://github.com/mlcommons/inference_results_v3.1/blob/main/closed/Qualcomm/calibration.md"
+      CM_ML_MODEL_WEIGHTS_DATA_TYPE: int32
+      CM_ML_MODEL_INPUTS_DATA_TYPE: int8,fp16
 
   bert-99.9,qaic:
     deps:
@@ -386,6 +393,10 @@ variations:
         skip_if_env:
           CM_MLPERF_SKIP_RUN:
             - yes
+    env:
+      CM_ML_MODEL_WEIGHT_TRANSFORMATIONS: "https://github.com/mlcommons/inference_results_v3.1/blob/main/closed/Qualcomm/calibration.md"
+      CM_ML_MODEL_WEIGHTS_DATA_TYPE: int32
+      CM_ML_MODEL_INPUTS_DATA_TYPE: fp16
 
   retinanet:
     group: model
@@ -421,6 +432,9 @@ variations:
       kilt_device_qaic_skip_stage: 'convert'
       kilt_input_format: "UINT8,1,3,800,800"
       kilt_output_format: "INT8,1,1000:INT8,1,1000:INT8,1,1000:INT8,1,1000:INT8,1,1000:INT8,1,1000:INT8,1,1000:INT8,1,1000:INT8,1,1000:INT8,1,1000:INT8,1,4,1000:INT8,14,1000:INT8,1,4,1000:INT8,1,4,1000:INT8,1,4,1000"
+      CM_ML_MODEL_WEIGHT_TRANSFORMATIONS: "https://github.com/mlcommons/inference_results_v3.1/blob/main/closed/Qualcomm/calibration.md"
+      CM_ML_MODEL_WEIGHTS_DATA_TYPE: int8
+      CM_ML_MODEL_INPUTS_DATA_TYPE: int8
 
 
   bert_:
