added CM script debug option to GUI

--- a/cm-mlops/script/run-mlperf-inference-app/_cm.yaml
+++ b/cm-mlops/script/run-mlperf-inference-app/_cm.yaml
@@ -488,4 +488,8 @@ input_description:
     desc: Print script execution time at the end of the run
     boolean: true
     default: true
+  debug:
+    desc: Debug this script
+    boolean: true
+    default: false
     
